# py-mmcif

./: .gitignore  CMakeLists.txt  HISTORY.txt  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  compare_type_files.py  pylintrc  pyproject.toml  setup.py  tox.ini
benchmarks/: .gitignore  targets_auto.txt  targets_csm.txt  targets_ihm.txt  targets_pdb.txt
benchmarks/scripts/: bcif_type_detector.py  bcif_validator.py  compare_cif.py  decoding_benchmark.py  download_csm_af_targets.sh  download_ihm_targets.sh  download_pdb_targets.sh  hriday_bcifWriter.py  pymmcif-benchmarking.py  test_encode.py
mmcif/: __init__.py
mmcif/io/: BinaryCifWriter.py  BinaryCifWriter_dictionary.py  IoAdapterBase.py  IoAdapterPy.py  PdbxReader.py  PdbxWriter.py
mmcif/tests/: testBinaryCifReader.py  testBinaryCifWriter.py  testBinaryCifWriter_dictionary.py  testPdbxReader.py
